--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,13 +33,22 @@ dependencies:
   firebase_core: ^4.0.0
   flutter:
     sdk: flutter
+  
   font_awesome_flutter: ^10.9.0
   panara_dialogs: ^0.1.5
+  provider: ^6.1.5
 
 dev_dependencies:
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.14.4
   flutter_test:
     sdk: flutter
+
+flutter_launcher_icons:             
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/icon.png"
+  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
